<resources>
    <string name="app_name">My Application 4</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">Save</string>
    <string name="counter_app_1st_fragment">Counter app 1st fragment</string>
    <string name="add_new_product">Add new product</string>
    <string name="back_to_start_page">Back to start page</string>
    <string name="enter_product">Enter product</string>
    <string name="enter_quantity">Enter quantity</string>
</resources>
