<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:orientation="vertical">


    <Button
        android:id="@+id/button_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/back_to_start_page"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="44dp" />

    <EditText
        android:id="@+id/product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Add new product"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true"
        android:text="@string/enter_product"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="131dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Add quantity"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:text="@string/enter_quantity"
        android:textAlignment="center"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="220dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FAF2F2"
        android:hint="@string/counter_app_1st_fragment"
        android:text="@string/save"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="281dp" />


</LinearLayout>